--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,12 +1,32 @@
 .header {
+  max-width: 75em;
   display: flex;
-  flex-direction: row;
-  gap: 32px;
+  padding: 1em 1.5em;
+  justify-content: space-between;
   align-items: center;
-  background-color: var(--white);
-  padding: 1.1em 20em;
 }
 
-.containerButton {
-  margin-left: auto;
+.header .containerButton .headerButton {
+  width: 10em;
+  height: 3em;
+  font-size: 14px;
+  font-weight: 600;
+  border: 1.75px solid;
+}
+
+.logo {
+  width: 7em;
+}
+
+@media screen and (min-width: 768px) {
+  .header {
+    gap: 32px;
+    align-items: center;
+    background-color: var(--white);
+    padding: 2em 20em;
+  }
+
+  .containerButton {
+    margin-left: auto;
+  }
 }
