--- a/src/components/ResponsiveButton/ResponsiveButton.module.css
+++ b/src/components/ResponsiveButton/ResponsiveButton.module.css
@@ -1,15 +1,12 @@
-.customButton {
+.resposiveButton {
   font-family: var(--main-font);
   background-color: var(--main-color);
   color: var(--white);
-  height: 51px;
-  width: 182px;
-  color: var(--white);
   font-size: 16px;
+  border: none;
 }
 
-.customButton.loginButton {
+.resposiveButton.whiteButton {
   background-color: var(--white);
   color: var(--main-color);
-  border: 1px solid var(--main-color);
 }
